--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -5,7 +5,7 @@
             <h1 class="hero-head">Welcome to Geekseek</h1>
             <h2>All your study needs in one place</h2>
             <div class="hero-options">
-                <a href="https://api.whatsapp.com/send?text=https%3A%2F%2Fgeekseeknsit.herokuapp.com" target="_blank" class="btn green big">Share <i class="fas fa-share-alt" aria-hidden="true"></i></a>
+                <a href="https://api.whatsapp.com/send?text=https%3A%2F%2Fgeekseeknsit.herokuapp.com" target="_blank" rel="noopener" class="btn green big">Share <i class="fas fa-share-alt" aria-hidden="true"></i></a>
             </div>
         </div>
         <div class="grid container">
@@ -16,7 +16,7 @@
                         <h1>User Friendly</h1>
                     </div>
                     <div class="back">
-                        <p>We tried our best to keep Geekseek simple as well as powerful. Notes, Assignments, e-Books, Labfiles, Question Papers is all that we have. You can see updates about important uploaded contents in our Blog section. In short we will try to make you pass your semester ;)</p>
+                        <p>We tried our best to keep Geekseek simple as well as powerful. Notes, Assignments, e-Books, Labfiles, Question Papers is all that we have. You can see updates about important uploads in our Blog section.<br><br>In short Geekseek will help you in every possible way to pass your semester ;)</p>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                         <h1>Access From Homescreen</h1>
                     </div>
                     <div class="back">
-                        <p>No need to open Chrome or any other browser everytime. Add Geekseek to your homescreen of your mobile device and have an app like experience. We are working on saving contents to your mobile device to access it offline.</p>
+                        <p>No need to open Chrome or any other browser everytime. Add Geekseek to homescreen of your mobile device and have an app like experience.<br><br>Or just download the app and install.<br><a href="https://drive.google.com/uc?id=109TfCfCToL_blliNHvcT8_iE-z9Xx5Lf&export=download">Geekseek for android</a><a href="">Geekseek for iOS</a></p>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                         <h1>Help Yourself!</h1>
                     </div>
                     <div class="back">
-                        <p>Are your notes amazing? Don't be nerdy! Help your bachmates and juniors with your study material. Geekseek gives you a great and easy platform to help others. And one thing important your identity is anonymous till your bachates don't guess it XD</p>
+                        <p>Are your notes amazing and helpful? Don't be nerdy! Help your bachmates and juniors with your study material. Geekseek gives you a great and easy platform to share your resources.<br><br>And one thing important, your identity is anonymous till your bachmates don't guess your handwriting XD</p>
                     </div>
                 </div>
             </div>
@@ -47,10 +47,10 @@
                 <div class="tile-content">
                     <div class="front">
                         <i class="fas fa-server fa-8x" aria-hidden="true"></i><br>
-                        <h1>Complete Content Backup</h1>
+                        <h1>Strong Content Backup</h1>
                     </div>
                     <div class="back">
-                        <p>We have a strong content backup strategy. Every content is saved securely, but we don't believe in shitty watermarks or copyrights. Just share what you have :)</p>
+                        <p>We have a strong content backup strategy. Every content is saved securely in Google Drive.<br><br>And we don't believe in shitty watermarks or copyrights. Just share what you have :)</p>
                     </div>
                 </div>
             </div>
@@ -58,10 +58,10 @@
                 <div class="tile-content">
                     <div class="front">
                         <i class="fas fa-sync fa-8x" aria-hidden="true"></i><br>
-                        <h1>Always Uptodate Content</h1>
+                        <h1>Revised Content</h1>
                     </div>
                     <div class="back">
-                        <p>Sick of same old content? No problem, Geekseek will always try to provide you with uptodate content! If you have better content than here at Geekseek, please make it available to us and help others also.</p>
+                        <p>Sick of same old content on other sites? No problem, Geekseek will always try to provide you with updated content!<br><br>If you have better content than Geekseek, please share with us and make it availabe for other too.</p>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                         <h1>About Our Team</h1>
                     </div>
                     <div class="back">
-                        <p>Ah! There's no team. Its only about you and your college. Make Geekseek a great resource of our college for all study needs.</p>
+                        <p>Ah! There's no team. Its only about us and our college.<br><br>Make Geekseek a great resource of our college for all study needs.</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         <h1>Join Admin Panel</h1>
                     </div>
                     <div class="back">
-                        <p>Want to share some content? Join us.. Geekseek provides you a very easy way to upload and manage content. You can edit or update your content without any restrictions.</p>
+                        <p>Want to share some content?<br><br>Join us.. Geekseek provides you a very easy way to upload and manage content. You can edit or update your content without any restrictions.</p>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                         <h1>Super Admin</h1>
                     </div>
                     <div class="back">
-                        <p>Yeah Super Admin! We have some super admins for Geekseek, who ensure that admins work properly and do not misuse this open source platform.</p>
+                        <p>Yeah Super Admin!<br><br>We have some super admins for Geekseek, who ensure that admins work properly and do not misuse this open source platform.</p>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <h1>For Love</h1>
                     </div>
                     <div class="back">
-                        <p>Geekseek is made to share love with study material. We know you will make us reach our aim. Make it, use it and share it!</p>
+                        <p>Geekseek is made to share love with study material.<br><br>Your support will make Geekseek to reach its goal.<br>Make it, use it and share it!</p>
                     </div>
                 </div>
             </div>
