--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -3,13 +3,13 @@
 		<div class="container">
 			<div class="foot-r">
 				<h3>Geekseek</h3>
-                <span>copyright&copy; 2017</span>
+                <span>copyright&copy; 2018</span>
 			</div>
 			<div class="foot-l">
 				<ul class="foot-social">
-					<li><a href="https://github.com/thetinygoat" title="Sachin Saini" target="_blank"><img src="https://avatars0.githubusercontent.com/u/32238055" onerror="this.onerror=null;this.src='/favicons/svg/ss.jpg'" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
-					<li><a href="https://github.com/riuandg5/Geekseek" title="Github Project" target="_blank"><i class="fab fa-github fa-3x"></i></a></li>
-					<li><a href="https://github.com/riuandg5" title="Rishu Anand" target="_blank"><img src="https://avatars2.githubusercontent.com/u/34133332" onerror="this.onerror=null;this.src='/favicons/svg/ra.jpg'" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
+					<li><a href="https://github.com/thetinygoat" title="Sachin Saini" target="_blank" rel="noopener"><img src="https://avatars0.githubusercontent.com/u/32238055" alt="Sachin Saini" onerror="this.onerror=null;this.src='/favicons/svg/ss.jpg'" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
+					<li><a href="https://github.com/riuandg5/Geekseek" title="Github Project" target="_blank" rel="noopener"><i class="fab fa-github fa-3x"></i></a></li>
+					<li><a href="https://github.com/riuandg5" title="Rishu Anand" target="_blank" rel="noopener"><img src="https://avatars2.githubusercontent.com/u/34133332" alt="Rishu Anand" onerror="this.onerror=null;this.src='/favicons/svg/ra.jpg'" style="width: 3em; height: 3em; border-radius: 50%;"></a></li>
 				</ul>
 			</div>
 		</div>
