--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- ------ -->
+    <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="194x194" href="/favicons/favicon-194x194.png">
@@ -17,7 +17,9 @@
     <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#353443">
-    <!-- ------ -->
+    <!-- SEO metadata -->
+    <meta name="description" content="&lt;em&gt;All your study needs in one place...&lt;/em&gt;&lt;br&gt;
+    Geekseek is a new platform for fulfilling all your study needs just in a blink. We have a new way for content collection which ensures content quality and accessibility. Make it, use it and share it!">
     <meta property="og:image" content="/favicons/og-image.jpg">
     <meta property="og:image:width" content="279">
     <meta property="og:image:height" content="279">
@@ -25,7 +27,7 @@
     Geekseek is a new platform for fulfilling all your study needs just in a blink. We have a new way for content collection which ensures content quality and accessibility. Make it, use it and share it!">
     <meta property="og:title" content="Geekseek">
     <meta property="og:url" content="https://geekseeknsit.herokuapp.com/">
-    <!-- ------ -->
+    <!-- Required contents -->
     <title>Geekseek</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
