--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -61,7 +61,7 @@
                         <h1>Revised Content</h1>
                     </div>
                     <div class="back">
-                        <p>Sick of same old content on other sites? No problem, Geekseek will always try to provide you with updated content!<br><br>If you have better content than Geekseek, please share with us and make it availabe for other too.</p>
+                        <p>Sick of same old content on other sites? No problem, Geekseek will always try to provide you with updated content!<br><br>If you have better content than Geekseek, please share with us and make it availabe for others too.</p>
                     </div>
                 </div>
             </div>
